--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build:
     - apt update
     - apt install -y gh
     - gh config set prompt disabled
-    - echo $GITHUB_TOKEN | gh auth login --with-token
+    - gh auth login
     - gh release create $CI_COMMIT_TAG ./dist/*.tgz --repo developandplay/black-parrot-sdk
   only:
     - tags
